; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/char/ipmi/extr_ipmi_si_intf.c_si_bt_irq_handler.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/char/ipmi/extr_ipmi_si_intf.c_si_bt_irq_handler.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.smi_info = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32 (%struct.TYPE_2__*, i32, i32)* }

@IPMI_BT_INTMASK_REG = common dso_local global i32 0, align 4
@IPMI_BT_INTMASK_CLEAR_IRQ_BIT = common dso_local global i32 0, align 4
@IPMI_BT_INTMASK_ENABLE_IRQ_BIT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i8*)* @si_bt_irq_handler to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @si_bt_irq_handler(i32 %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca %struct.smi_info*, align 8
  store i32 %0, i32* %3, align 4
  store i8* %1, i8** %4, align 8
  %6 = load i8*, i8** %4, align 8
  %7 = bitcast i8* %6 to %struct.smi_info*
  store %struct.smi_info* %7, %struct.smi_info** %5, align 8
  %8 = load %struct.smi_info*, %struct.smi_info** %5, align 8
  %9 = getelementptr inbounds %struct.smi_info, %struct.smi_info* %8, i32 0, i32 0
  %10 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %9, i32 0, i32 0
  %11 = load i32 (%struct.TYPE_2__*, i32, i32)*, i32 (%struct.TYPE_2__*, i32, i32)** %10, align 8
  %12 = load %struct.smi_info*, %struct.smi_info** %5, align 8
  %13 = getelementptr inbounds %struct.smi_info, %struct.smi_info* %12, i32 0, i32 0
  %14 = load i32, i32* @IPMI_BT_INTMASK_REG, align 4
  %15 = load i32, i32* @IPMI_BT_INTMASK_CLEAR_IRQ_BIT, align 4
  %16 = load i32, i32* @IPMI_BT_INTMASK_ENABLE_IRQ_BIT, align 4
  %17 = or i32 %15, %16
  %18 = call i32 %11(%struct.TYPE_2__* %13, i32 %14, i32 %17)
  %19 = load i32, i32* %3, align 4
  %20 = load i8*, i8** %4, align 8
  %21 = call i32 @si_irq_handler(i32 %19, i8* %20)
  ret i32 %21
}

declare dso_local i32 @si_irq_handler(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
